# WaiterBot

./: .travis.yml  LICENSE  README.md
waiter_bot/: CMakeLists.txt  package.xml
waiter_bot/docs/: waiterBotDocs
waiter_bot/docs/html/: annotated.html  classdistSensor-members.html  classdistSensor.html  classes.html  classfoodStub-members.html  classfoodStub.html  classfoodStub__coll__graph.map  classfoodStub__coll__graph.md5  classforceSensor-members.html  classforceSensor.html  classmotionModule-members.html  classmotionModule.html  classposition-members.html  classposition.html  classwaiterBot-members.html  classwaiterBot.html  classwaiterBot__coll__graph.map  classwaiterBot__coll__graph.md5  dir_000001_000000.html  dir_000002_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  (+98 more)
waiter_bot/include/: distSensor.hpp  food.hpp  foodStub.hpp  forceSensor.hpp  motionModule.hpp  position.hpp  waiterBot.hpp
waiter_bot/launch/: waiter_bot_demo.launch
waiter_bot/results/: cppcheckResults.txt  cpplintResults.txt
waiter_bot/src/: distSensor.cpp  food.cpp  foodStub.cpp  foodStub_node.cpp  forceSensor.cpp  motionModule.cpp  position.cpp  test_node.cpp  waiterBot.cpp  waiterBot_node.cpp
waiter_bot/test/: distSensorTest.cpp  foodStubTest.cpp  foodTest.cpp  foodTest.launch  forceSensorTest.cpp  mainTest.cpp  mainTest.launch  motionModuleTest.cpp  nodeInteractionsTest.cpp  positionTest.cpp  waiterBotTest.cpp
waiter_bot/world/: DemoWorld  DemoWorld1  waiterBot_world
(+102 files in other folders)
