<?xml version="0.1"?>
<package>
  <name>waiter_bot</name>
  <version>0.0.1</version>
  <description>The waiter_bot package</description>

  
  <maintainer email="raceved3@umd.edu">Ruben Acevedo</maintainer>
  <license>MIT</license>
  <author email="raceved3@umd.edu">Ruben Acevedo</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
